--- a/project 02 landing/index.html
+++ b/project 02 landing/index.html
@@ -14,9 +14,11 @@
 </head>
 
 <body>
+    <!--хидер-->
     <header class="header">
         <div class="header_content">
             <span class="navlink navlink_active">IC "Repair Design Project"</span>
+            <!--навигация-->
             <nav>
                 <ul class="nav">
                     <a href="#home" class="navlink navlink_active">
@@ -39,14 +41,16 @@
                     </a>
                 </ul>
             </nav>
-            <div class="phone">
-                <p class="navlink navlink_active underlined">+7 (928) 768-32-39</p>
+            <div class="phone-number">
+                <p class="navlink navlink_active accent">+7 (928) 768-32-39</p>
                 <button class="button header_button">Request a call</button>
             </div>
         </div>
     </header>
-    <content>
-        <section class="hero">
+    <!--основная часть-->
+    <content class="main">
+        <!--секция hero-->
+        <section class="hero section">
             <div class="hero_background"></div>
             <div id="home"></div>
             <div class="hero_content">
@@ -63,6 +67,7 @@
                 </div>
             </div>
         </section>
+        <!--секция completed-->
         <section class="completed_section">
             <div class="completed">
                 <div id="projects"></div>
@@ -76,10 +81,11 @@
                                     on the site. For 14 years on in the construction </br>
                                     market we have made happy more than 1000 families</p>
                             </div>
+                          <!--картинки-->
                             <div class="mobile_gallery">
-                                <img src="images\arrow_left.svg" alt="arrow left" class="arrow arrow_left" width="36" height="36">
-                                <img src="images\mobile_img.png" alt="interior" class="mob_interior">
-                                <img src="images\arrow_right.svg" alt="arrow right" class="arrow arrow_right" width="36" height="36">
+                                <img src="images\arrow_left.svg" alt="стрелка" class="arrow arrow_left" width="36" height="36">
+                                <img src="images\mobile_img.png" alt="комната" class="mob_interior">
+                                <img src="images\arrow_right.svg" alt="стрелка" class="arrow arrow_right" width="36" height="36">
                             </div>
                             <div class="completed_parameters">
                                 <div class="completed_city">
@@ -100,7 +106,7 @@
                                             request</span></h3>
                                 </div>
                             </div>
-                            <img class="gallery_img" src="images\gallery.svg" alt="arrows">
+                            <img class="gallery_img" src="images\gallery.svg" alt="стрелки">
                         </div>
                         <div class="completed_photo">
                             <ul class="completed_cities">
@@ -114,22 +120,23 @@
                                     <li>Rostov-on-Don Patriotic</li>
                                 </a>
                             </ul>
-                            <img src="images\completed.png" alt="completed room" width="680" height="482">
+                            <img src="images\completed.png" alt="комната" width="680" height="482">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="online_control">
+        <!--секция online control-->
+        <section class="online_control section">
             <div class="background_control">
                 <h2 class="heading online_heading">Online control</h2>
                 <div class="icon_img camera_img">
-                    <img src="images\camera.svg" alt="camera" class="logo">
+                    <img src="images\camera.svg" alt="камера" class="logo">
                 </div>
                 <div class="video">
-                    <img src="images\video.png" alt="video" width="817" height="434" class="video_img">
+                    <img src="images\video.png" alt="видеоролик" width="817" height="434" class="video_img">
                     <div class="play_border">
-                        <img src="images\play.svg" alt="play" class="play">
+                        <img src="images\play.svg" alt="кнопка" class="play">
                     </div>
                 </div>
             </div>
@@ -139,6 +146,7 @@
                 on the clock. At any time, you can go to our website and monitor the progress of work in your
                 apartment. You can watch the live broadcast from one of our facilities!
                 Leave a request below and you will receive a link to the broadcast.</p>
+                <!--форма-->
             <div class="form">
                 <div class="form_flex">
                 <div class="form_input">
@@ -170,15 +178,17 @@
                 </label>
             </div>
         </section>
-        <section class="types_of_repair">
+        <!--секция types of repair-->
+        <section class="types_of_repair section">
             <h2 class="heading online_heading repair_heading">Types of repair</h2>
                 <div class="icon_img instruments_img">
                     <img src="images\instruments.svg" alt="instruments" class="logo">
                 </div>
+                <!--карточки-->
             <div class="cards">
                 <div class="card">
                     <img src="images\redecorating_image.jpg" class="card_img" width="390" height="420"
-                        alt="redecorating picture">
+                        alt="ремонт комнат">
                     <div class="card_info">
                         <p class="card_heading">Redecorating</p>
                         <ul class="card_services">
@@ -194,9 +204,10 @@
                             m2</div>
                     </div>
                 </div>
+                <!--карточки-->
                 <div class="card">
                     <img src="images\overhaul_image.jpg" class="card_img" width="390" height="420"
-                        alt="redecorating picture">
+                        alt="ремонт комнат">
                     <div class="card_info">
                         <p class="card_heading">Overhaul</p>
                         <ul class="card_services">
@@ -212,9 +223,10 @@
                             m2</div>
                     </div>
                 </div>
+                <!--карточки-->
                 <div class="card">
                     <img src="images\designer_image.jpg" class="card_img" width="390" height="420"
-                        alt="redecorating picture">
+                        alt="ремонт комнат">
                     <div class="card_info">
                         <p class="card_heading">Designer repair</p>
                         <ul class="card_services">
@@ -232,9 +244,11 @@
                 </div>
             </div>
         </section>
-        <section class="work_stages">
+        <!--секция work stages-->
+        <section class="work_stages section">
             <div class="stages_measure_flex">
                 <div id="measurement"></div>
+                <!--блок stages-->
                 <div class="stages_container">
                     <div class="stages">
                         <div class="stage">
@@ -266,6 +280,7 @@
                     </div>
                 </div>
             </div>
+            <!--Блок формы заявки-->
             <div class="right_measure">
                 <div class="form form_measure">
                     <p class="text form_measure_message">Leave a request for free </br>
@@ -296,7 +311,7 @@
                 </div>
                 <div class="discount">
                     <div class="img_discount_border">
-                        <img src="images\cost.svg" alt="save money" class="discount_img" width="40" height="33">
+                        <img src="images\cost.svg" alt="скидка" class="discount_img" width="40" height="33">
                     </div>
                     <p class="text discount_text">Help save 10 - 20% of the </br>
                         cost of materials</p>
@@ -305,12 +320,13 @@
             </div>
         </section>
 
-
+<!--секция styles-->
         <section class="styles_section">
             <div class="styles">
                 <div id="team"></div>
                 <div class="styles_content">
                     <div class="styles_fantasies">
+                        <!--список-->
                         <h2 class="heading styles_heading">We realize your </br>
                             wildest fantasies</h2>
                         <ul class="styles_list">
@@ -327,33 +343,36 @@
                             <li class="style_name">Eclecticism</li>
                         </ul>
                     </div>
-                    <img src="images\style1.png" alt="Amercan classic" class="style_pic_1" width="354" height="557">
-                    <img src="images\style2.png" alt="Amercan classic" class="style_pic_2" width="354" height="350">
-                    <img src="images\style3.png" alt="Amercan classic" class="style_pic_3" width="354" height="280">
-                    <img src="images\style4.png" alt="Amercan classic" class="style_pic_4" width="354" height="625">
+                    <!--картинки-->
+                    <img src="images\style1.png" alt="стиль" class="style_pic_1" width="354" height="557">
+                    <img src="images\style2.png" alt="стиль" class="style_pic_2" width="354" height="350">
+                    <img src="images\style3.png" alt="стиль" class="style_pic_3" width="354" height="280">
+                    <img src="images\style4.png" alt="стиль" class="style_pic_4" width="354" height="625">
                 </div>
                 <div class="img_mobile">
-                    <img src="images\arrow_left.svg" alt="arrow left" class="arrow arrow_left arrow_1" width="36" height="36">
-                    <img src="images\style1_mobile.png" alt="interior" class="style_mobile">
-                    <img src="images\arrow_right.svg" alt="arrow right" class="arrow arrow_right arrow_1" width="36" height="36">
+                    <img src="images\arrow_left.svg" alt="стрелка" class="arrow arrow_left arrow_1" width="36" height="36">
+                    <img src="images\style1_mobile.png" alt="интерьер" class="style_mobile">
+                    <img src="images\arrow_right.svg" alt="стрелка" class="arrow arrow_right arrow_1" width="36" height="36">
             </div>
             </div>
         </section>
-        <section class="our_clients">
+        <!--секция our clients-->
+        <section class="our_clients section">
             <div class="clients_content">
                 <div class="clients_intro">
                     <div id="reviews"></div>
                     <h2 class="heading clients_heading">Our clients</h2>
                     <div class="icon_img clients_img">
-                        <img src="images\clients.svg" alt="handshake" class="logo">
+                        <img src="images\clients.svg" alt="лого" class="logo">
                     </div>
                     <p class="text intro_recommendations">80% of our customers recommend us to their </br>
                         friends and family.</p>
                 </div>
+                <!--карточки-->
                 <div class="client_cards">
                     <div class="client_card">
                         <div class="client_card_heading">
-                            <img src="images\client_1.png" alt="client photo" class="client_photo" width="76"
+                            <img src="images\client_1.png" alt="фото" class="client_photo" width="76"
                                 height="76">
                             <p class="client_name">Fedosova Maria</br>
                                 Konstantinovna</p>
@@ -371,13 +390,13 @@
                         <div class="client_card_parameters_border">
                             <div class="client_card_parameters">
                                 <div class="card_parameter client_area">
-                                    <img src="images\meters.svg" alt="room area" class="clients_icon icon_area"
+                                    <img src="images\meters.svg" alt="размер" class="clients_icon icon_area"
                                         width="32" height="32">
                                     <p class="parameter_text">40 m2</p>
                                 </div>
                                 <hr class="line client_card_line">
                                 <div class="card_parameter client_time">
-                                    <img src="images\calendar.svg" alt="time spent" class="clients_icon icon_time"
+                                    <img src="images\calendar.svg" alt="время" class="clients_icon icon_time"
                                         width="32" height="32">
                                     <p class="parameter_text">48 days</p>
                                 </div>
@@ -387,7 +406,7 @@
 
                     <div class="client_card">
                         <div class="client_card_heading">
-                            <img src="images\client_2.png" alt="client photo" class="client_photo" width="76"
+                            <img src="images\client_2.png" alt="фото" class="client_photo" width="76"
                                 height="76">
                             <p class="client_name">Afanasyev Sergey</br> Alexandrovich</p>
                         </div>
@@ -404,13 +423,13 @@
                         <div class="client_card_parameters_border">
                             <div class="client_card_parameters">
                                 <div class="card_parameter client_area">
-                                    <img src="images\meters.svg" alt="room area" class="clients_icon icon_area"
+                                    <img src="images\meters.svg" alt="размер" class="clients_icon icon_area"
                                         width="32" height="32">
                                     <p class="parameter_text">90 m2</p>
                                 </div>
                                 <hr class="line client_card_line">
                                 <div class="card_parameter client_time">
-                                    <img src="images\calendar.svg" alt="time spent" class="clients_icon icon_time"
+                                    <img src="images\calendar.svg" alt="время" class="clients_icon icon_time"
                                         width="32" height="32">
                                     <p class="parameter_text">128 days</p>
                                 </div>
@@ -420,7 +439,7 @@
 
                     <div class="client_card">
                         <div class="client_card_heading">
-                            <img src="images\client_3.png" alt="client photo" class="client_photo" width="76"
+                            <img src="images\client_3.png" alt="фото" class="client_photo" width="76"
                                 height="76">
                             <p class="client_name">Kiriev Egor</br> Leonidovich</p>
                         </div>
@@ -437,13 +456,13 @@
                         <div class="client_card_parameters_border">
                             <div class="client_card_parameters">
                                 <div class="card_parameter client_area">
-                                    <img src="images\meters.svg" alt="room area" class="clients_icon icon_area"
+                                    <img src="images\meters.svg" alt="размер" class="clients_icon icon_area"
                                         width="32" height="32">
                                     <p class="parameter_text">56 m2</p>
                                 </div>
                                 <hr class="line client_card_line">
                                 <div class="card_parameter client_time">
-                                    <img src="images\calendar.svg" alt="time spent" class="clients_icon icon_time"
+                                    <img src="images\calendar.svg" alt="время" class="clients_icon icon_time"
                                         width="32" height="32">
                                     <p class="parameter_text">86 days</p>
                                 </div>
@@ -453,12 +472,13 @@
                 </div>
             </div>
             <div class="background_image_clients">
-                <img class="background_img_clients" src="images\skyscrapers.png" alt="background" width="33.2%">
-                <img class="background_img_clients" src="images\skyscrapers.png" alt="background" width="33.1%">
-                <img class="background_img_clients" src="images\skyscrapers.png" alt="background" width="33.2%">
+                <img class="background_img_clients" src="images\skyscrapers.png" alt="фон" width="33.2%">
+                <img class="background_img_clients" src="images\skyscrapers.png" alt="фон" width="33.1%">
+                <img class="background_img_clients" src="images\skyscrapers.png" alt="фон" width="33.2%">
             </div>
         </section>
-        <section class="contacts">
+        <!--секция контактов-->
+        <section class="contacts section">
             <div id="contacts"></div>
             <div class="contacts_content">
                 <div class="questions_form">
@@ -496,19 +516,21 @@
                         Decorum Tel +7 (928) 768 32 29</h2>
                     <div class="socials">
                         <div class="img_contacts_border">
-                            <img src="images\mail.svg" alt="mail" class="img_contacts" width="12" height="12">
+                            <img src="images\mail.svg" alt="имейл" class="img_contacts" width="12" height="12">
                         </div>
                         <div class="img_contacts_border">
-                            <img src="images\insta.svg" alt="instagram" class="img_contacts" width="12" height="12">
+                            <img src="images\insta.svg" alt="инста" class="img_contacts" width="12" height="12">
                         </div>
                     </div>
                 </div>
+                <!--карта-->
                     <div class="map">
-                        <img src="images\map.png" class="map_img" alt="map" width="900">
+                        <img src="images\map.png" class="map_img" alt="карта" width="900">
                     </div>
                 </div>
             </div>
         </section>
+        <!--футер-->
         <footer class="footer">
             <div class="header_content">
                 <span class="navlink navlink_active">IC "Repair Design Project"</span>
@@ -534,8 +556,8 @@
                         </a>
                     </ul>
                 </nav>
-                <div class="phone">
-                    <p class="navlink navlink_active underlined">+7 (928) 768-32-39</p>
+                <div class="phone-number">
+                    <p class="navlink navlink_active accent">+7 (928) 768-32-39</p>
                     <button class="button header_button">Request a call</button>
                 </div>
             </div>
